# sha_api

./: README.md  pyproject.toml
src/api-data-ops/acs/: pull.py  variables.py
src/api-data-ops/data/: csv.py
src/dataops/: _helpers.py  api.py  models.py  portal.py
src/dataops/acs/: pull.py  variables.py
src/dataops/api/: parse.py
src/dataops/data/: csv.py  url.py
src/dataops/models/: acs-old.py  acs.py  acs_methods.py  acs_mixins.py  app.py  applicationsettings.py  censusapiendpoint.py  configs.py  endpoints.py  input.py  settings.py  testing.py
src/dataops/portals/: data.py
src/dataops/wip/: parse.py  testing.py  variables.py
src/sha_api/acs/: variables.py
src/sha_api/brfss/: codebook.py
tests/: conftest.py  test_models.py
wip/: eda-vars.qmd  tbd_datasetclass.py
