[project]
name = "dataops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Senetcky", email = "alexander.senetcky@ct.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataops"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
]
