[project]
name = "dataops"
version = "0.3.1"
description = "DPH DMAG Data Operations"
readme = "README.md"
authors = [
    { name = "Alexander Senetcky", email = "alexander.senetcky@ct.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sodapy>=2.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"